--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,11 @@ yarn-error.log*
 # vercel
 .vercel
 
-# typescript
+# type
 *.tsbuildinfo
 next-env.d.ts
+
+# nested git repositories
+Magnolia-Flight-Portal/
+Magnolia-Portal-2.0/
 
